# HelloGUI

./: .editorconfig  .gitignore  FIXES_SUMMARY.md  HOWTO.md  README.md  README_FIXES.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  Repo - HelloGUI - GitHub.url
docs/prompt/: Prompt - HelloGUI.docx  Prompt_0.docx  Prompt_1.docx
docs/ref/style/: sectioned text.txt  style.bat  style.py
docs/ref/style/Src/: Style.lnk
scripts/: build_exe.bat  quick_start.bat  quick_start.ps1  run_tests.bat
src/hello_gui/: __init__.py  app.py  main_window.py
src/hello_gui/core/: __init__.py  data_stream.py  io_manager.py  logging_setup.py  state.py
src/hello_gui/models/: __init__.py  config_model.py  dataset_model.py
src/hello_gui/plot/: __init__.py  plot_widget.py
src/hello_gui/ui/: __init__.py  config_tab.py  dashboard_tab.py
tests/: __init__.py  test_data_stream.py  test_io_manager.py
