[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hellogui"
version = "1.0.0"
description = "Professional Python GUI demonstration with real-time data visualization"
readme = "docs/README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HelloGUI Team", email = "dev@example.com"},
]
keywords = ["gui", "pyside6", "matplotlib", "visualization", "demo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PySide6>=6.5.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]
build = [
    "pyinstaller>=5.13.0",
]

[project.scripts]
hellogui = "hello_gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | venv
  | \.pytest_cache
  | \.mypy_cache
  | dist
  | build
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "PySide6.*",
]
ignore_missing_imports = true
